<resources>
    <string name="app_name">Diabetes Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">You are not signed in</string>
    <string name="nav_header_title_logged_in">You are signed in</string>
    <string name="nav_header_subtitle">Please sign in to use all features</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_prefix">COM_GITHUHB_DIABETESASSISTANT</string>
    <string name="access_token_key">COM_GITHUHB_DIABETESASSISTANT_ACCESS_KEY</string>
    <string name="id_token_key">COM_GITHUHB_DIABETESASSISTANT_ID_KEY</string>

    <string name="menu_login">Sign-in / Register</string>
    <string name="menu_calculate_insulin_dosage">Calculate insulin dosage</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_show_diary">Show blood glucose diary</string>
    <string name="menu_doctor_management">Doctor Management</string>

    <string name="title_activity_login">Sign-in</string>
    <string name="login_description">To use all available features you need to sign in.</string>
    <string name="login_email_label">E-Mail:</string>
    <string name="login_email_placeholder">yourname@email.com</string>
    <string name="login_password_label">Password:</string>
    <string name="login_password_placeholder">Your Password</string>
    <string name="login_submit_button">Sign-in</string>
    <string name="login_failed">Login failed</string>
    <string name="login_success">Successfully logged in</string>

    <string name="title_activity_register">Register</string>
    <string name="register_description">Please register with your email-address and a password.</string>
    <string name="register_email_label">E-Mail:</string>
    <string name="register_email_placeholder">yourname@email.com</string>
    <string name="register_password_label">Password:</string>
    <string name="register_password_placeholder">Your Password</string>
    <string name="register_password_confirmation_label">Password confirmation:</string>
    <string name="register_password_confirmation_placeholder">Your Password</string>
    <string name="register_submit_button">Register</string>
    <string name="register_failed">Register failed</string>
    <string name="register_success">Register succeeded</string>

    <string name="title_activity_calculate_dosage">Insulin dosage calculation</string>
    <string name="calculate_dosage_description">Calculation of your recommended insulin dosage</string>
    <!-- TODO Ermöglichen, dass sowohl in mg/dl als auch in mmol/l eingegeben werden kann -->
    <string name="calculate_dosage_glucose_level">Glucose level [mg/dl]</string>
    <string name="calculate_dosage_amount_carbohydrates">Carbohydrate intake [carbohydrate units]</string>
    <string name="calculate_dosage_result_description">Your recommended insulin dosage:</string>
    <string name="calculate_dosage_result">Insulin dosage [IE]</string>
    <string name="calculate_dosage_submit_button">Calculate insulin dosage</string>
    <string name="calculate_dosage_invalid_input">Missing input, calculation failed</string>
    <string name="calculate_dosage_glucose_level_too_high">Glucose level too high, Please consult your doctor!</string>
    <string name="calculate_dosage_glucose_level_too_low">Glucose level too low, eat or drink your emergency meal urgently!</string>
    <string name="calculate_dosage_no_insulin_recommended">Do not inject insulin!</string>
    <string name="calculate_dosage_clear">Clear input for new calculation</string>
    <string name="calculate_dosage_save">Save calculation in diary</string>

    <string name="warning_resume">Back to Dosage Calculation</string>

    <string name="doctor_management_add_doctor_title">Confirm your doctor assignment</string>
    <string name="doctor_management_add_doctor_description">You do not have a doctor assigned yet. You can do so by adding your doctors confirmation code and confirming it. Please get in touch with your doctor to get the confirmation code.</string>
    <string name="doctor_management_confirmation_code_label">Confirmation code:</string>
    <string name="doctor_management_confirmation_code_placeholder">6 digit confirmation code</string>
    <string name="doctor_management_confirmation_button">Confirm</string>
    <string name="doctor_management_confirmation_hint">You are going to confirm doctor:</string>
    <string name="doctor_management_confirmation_failure">The code you provided unfortunately did not work. Please try again</string>
    <string name="doctor_management_confirmation_success">Successfully confirmed the doctor</string>
</resources>
