<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".auth.presentation.RegisterActivity">

    <TextView
        android:id="@+id/registerDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_description"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/registerEmailAddressLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingStart="@dimen/padding_label"
        android:paddingEnd="@dimen/padding_label"
        android:text="@string/register_email_label"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/registerEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/register_email_placeholder"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/registerPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingStart="@dimen/padding_label"
        android:paddingEnd="@dimen/padding_label"
        android:text="@string/register_password_label"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/register_password_placeholder"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/registerPasswordConfirmationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingStart="@dimen/padding_label"
        android:paddingEnd="@dimen/padding_label"
        android:text="@string/register_password_confirmation_label"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/registerPasswordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/register_password_confirmation_placeholder"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/register_submit_button" />

</LinearLayout>