<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculateDosageContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".auth.presentation.CalculateDosageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calculate_dosage_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/calculate_dosage_description"
            android:textSize="@dimen/text_size_normal" />

        <!-- TODO Ermöglichen, dass sowohl in mg/dl als auch in mmol/l eingegeben werden kann -->
        <!-- TODO benötigt man hier android:autofillHints ? -->
        <EditText
            android:id="@+id/calculate_dosage_glucose_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_small"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/calculate_dosage_glucose_level"/>

        <!-- TODO im engl. Sprachraum/ USA scheint die Kohlenhydrateinheit nicht gebräuchlich zu sein -->
        <!-- TODO muss man hier auf Gesamtmenge der "reinen" Kohlenhydrate in Gramm ausweichen? -->
        <EditText
            android:id="@+id/calculate_dosage_amount_carbohydrates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_small"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/calculate_dosage_amount_carbohydrates"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/calculate_dosage_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_dosage_submit_button" />

                <TextView
                        android:id="@+id/calculate_dosage_result_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:textSize="@dimen/text_size_normal"
                        android:text="@string/calculate_dosage_result_description"/>

                    <!-- Der Text dieser TextView wird erst nach Berechnung der Dosis gesetzt -->
                    <TextView
                        android:id="@+id/calculate_dosage_dosage_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:textSize="@dimen/text_size_normal"
                        android:text=""/>

                <!-- Evtl. noch einen Button "Save in diary as injected dosage" hinzufügen -->

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>